# fractal-miner

./: .gitignore  CMakeLists.txt  README.md  benchmark.cu  benchmark.h  build.sh  example_config.json  fractal-miner  install.sh  main.cu  mining_pool.cpp  mining_pool.h  mining_rpc.cpp  mining_rpc.h  monitor_gpu_temperature.cu  monitor_gpu_temperature.h  sha256.cu  sha256.h  sha256d_kernel.cu
